k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pipeline-sample-nodejs
  namespace: $(kubernetes-namespace)
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pipeline-sample-nodejs
  template:
    metadata:
      labels:
        app: pipeline-sample-nodejs
    spec:
      containers:
      - name: container
        image: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/ded/samples-pipeline-nodejs:$(Build.BuildId)
        ports:
        - containerPort: 3000
          name: web
        # env:
        #   - name:  CONNECTIONSTRING
        #     valueFrom:
        #       secretKeyRef:
        #         name:  connection
        #         key:  connectionstring
        # resources:
        #   requests:
        #     cpu: "20m"
        #     memory: "100M"
        #   limits:
        #     cpu: "20m"
        #     memory: "55M"
