k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipeline-sample-nodejs
  name: pipeline-sample-nodejs
  namespace: $(kubernetes-namespace)
  annotations:
    scrape-metrics: 'true'
spec:
  ports:
  - name: external
    port: 80
    targetPort: web
  selector:
    app: pipeline-sample-nodejs
  type: ClusterIP
