k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pipeline-sample-nodejs
  namespace: $(kubernetes-namespace)
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      # host: app.ded.dfds.com
      paths:
      - path: /$(environment)-pipeline-sample-nodejs
        backend:
          serviceName: pipeline-sample-nodejs
          servicePort: external
